--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
                                 <a href="https://ederzoca.github.io/pagina-senac/">Recriar uma página do Senac</a>
                             </li>
+                            <li data-aos="fade-left">
+                                <span class="fa-li"><i class="fas fa-check"></i></span>
+                                <a href="https://ederzoca.github.io/curriculum/">Este currículo!</a>
+                            </li>
                         </ul>
                         </div>
                     </div>
