--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                             </li>
                             <li data-aos="fade-left">
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Discover - Rocketseat
+                            </li>
+                            <li data-aos="fade-left">
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                                 devTEC - Evento de Tecnologia
                             </li>
                             <li data-aos="fade-left">
