--- a/index.html
+++ b/index.html
@@ -121,15 +121,11 @@
                         <ul class="fa-ul mb-0">
                             <li data-aos="fade-left">
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                <a href="https://ederzoca.github.io/player-project/">Projeto de player de música</a>
+                                <a href="https://ederzoca.github.io/player-project/" target="_blank">Projeto de player de música</a>
                             </li>
                             <li data-aos="fade-left">
                                 <span class="fa-li"><i class="fas fa-check"></i></span>
-                                <a href="https://ederzoca.github.io/pagina-senac/">Recriar uma página do Senac</a>
-                            </li>
-                            <li data-aos="fade-left">
-                                <span class="fa-li"><i class="fas fa-check"></i></span>
-                                <a href="https://ederzoca.github.io/curriculum/">Este currículo!</a>
+                                <a href="https://ederzoca.github.io/pagina-senac/" target="_blank">Recriar uma página do Senac</a>
                             </li>
                         </ul>
                         </div>
