--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         Brasil &nbsp; · &nbsp;Tubarão - SC&nbsp; · &nbsp;(048) 98870-4784 &nbsp;·&nbsp;
                         <a href="mailto:name@email.com">eder.silveira10@hotmail.com</a>
                     </div>
-                    <p class="lead mb-5">Acredito que como dizia Hayek, o conhecimento está disperso na sociedade, por isso, a colaboração se torna o alicerce para alcançarmos grandes conquistas. Em meu compromisso como um estudande de Análise e Desenvolvimento de Sistemas, tenho buscado incessantemente não apenas desenvolver minhas habilidades, mas também compartilhar e integrar ideias. Penso que ao unir nossas experiências, podemos transformar desafios em oportunidades e impactar positivamente na nossa área e no mundo.</p>
+                    <p class="lead mb-5">Acredito que o conhecimento está disperso na sociedade, por isso, a colaboração se torna o alicerce para alcançarmos grandes conquistas. Como um estudande de Análise e Desenvolvimento de Sistemas, tenho buscado incessantemente não apenas desenvolver minhas habilidades, mas também compartilhar e integrar ideias. Penso que ao unir nossas experiências, podemos transformar desafios em oportunidades e impactar positivamente na nossa área e no mundo.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/eder-silveira-202854237/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/ederzoca"><i class="fab fa-github"></i></a>
