--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Interesses</h2>
                     <div data-aos="fade-left">
-                        <p>Busco oportunidades para aplicar minha paixão pela programação e resolução de desafios em projetos de análise e desenvolvimento de sistemas. Com formação sólida e entusiasmo por tecnologia, pretendo contribuir para a criação de soluções inovadoras e eficientes. Estou empenhado em aprimorar minhas habilidades e fazer parte de equipes que compartilham o objetivo de impactar positivamente a sociedade por meio da tecnologia.</p>
+                        <p>Busco oportunidades para aplicar minha paixão pela programação e resolução de desafios em projetos de análise e desenvolvimento de sistemas. Pretendo contribuir para a criação de soluções inovadoras e eficientes. Estou empenhado em aprimorar minhas habilidades e fazer parte de equipes que compartilham o objetivo de impactar positivamente a sociedade por meio da tecnologia.</p>
                         <p class="mb-0">Uma das minhas metas atuais é aprimorar meus conhecimentos em Java e em banco de dados. Fora isso, tenho muita vontade de aprender Python...</p>
                     </div>
                 </div>
