--- a/index.html
+++ b/index.html
@@ -63,11 +63,19 @@
                     <h2 data-aos="fade-right" class="mb-5">Experiências</h2>
                     <div data-aos="fade-left" class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Estágio de Desenvolvimento</h3>
+                            <div class="subheading mb-3">CELK Sistemas</div>
+                            <p>O programa de estágio "DevTalents" tem o foco em formar futuros desenvolvedores através de aulas e práticas da área. Os estagiários são apresentados à problemas reais e à rotina de um desenvolvedor, orientados por mentores para ganhar experiência. O objetivo é desenvolver habilidades técnicas e prepará-los para o mercado de trabalho, oferecendo recursos educacionais e orientação especializada.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Março 2024 - Presente</span></div>
+                    </div>
+                    <div data-aos="fade-left" class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Setor de Compras</h3>
                             <div class="subheading mb-3">Eco Resíduos Ambiental</div>
                             <p>Compra dos materiais: limpeza, ferramentas, peças, chapeação e pintura. Além de, criar via Canva e fazer os posts no Instagram da empresa, abastecer os caminhões e dar baixa nas notas de entrada e dar entrada das notas a pagar.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Setembro 2022 - Presente</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Setembro 2022 - Março 2024</span></div>
                     </div>
                     <div data-aos="fade-left" class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -141,8 +149,8 @@
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Interesses</h2>
                     <div data-aos="fade-left">
-                        <p>Busco oportunidades para aplicar minha paixão pela programação e resolução de desafios em projetos de análise e desenvolvimento de sistemas. Pretendo contribuir para a criação de soluções inovadoras e eficientes. Estou empenhado em aprimorar minhas habilidades e fazer parte de equipes que compartilham o objetivo de impactar positivamente a sociedade por meio da tecnologia.</p>
-                        <p class="mb-0">Uma das minhas metas atuais é aprimorar meus conhecimentos em Java e em banco de dados. Fora isso, tenho muita vontade de aprender Python...</p>
+                        <p>Busco oportunidades para aplicar minha paixão pela programação e resolução de desafios em projetos de desenvolvimento. Pretendo contribuir para a criação de soluções inovadoras e eficientes. Estou empenhado em aprimorar minhas habilidades e fazer parte de equipes que compartilham o objetivo de impactar positivamente a sociedade por meio da tecnologia.</p>
+                        <p class="mb-0">Uma das minhas metas atuais é aprimorar ao máximo meus conhecimentos em Java e em banco de dados. Fora isso, tenho muita vontade de aprender Python no futuro...</p>
                     </div>
                 </div>
             </section>
@@ -156,6 +164,14 @@
                             <li data-aos="fade-left">
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                                 Inglês Avançado - Influx
+                            </li>
+                            <li data-aos="fade-left">
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Fundamentos de Java - Rocketseat
+                            </li>
+                            <li data-aos="fade-left">
+                                <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                                Fundamentos de Spring Boot - Rocketseat
                             </li>
                             <li data-aos="fade-left">
                                 <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
